<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Guideline Horizontal -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <!-- Pantalla de Inicio -->
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Seguimiento de Emociones -->
    <Button
        android:id="@+id/emotionalDiaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotional_diary_button_text"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Recursos de Autoayuda -->
    <Button
        android:id="@+id/selfHelpResourcesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_help_resources_button_text"
        app:layout_constraintTop_toBottomOf="@id/emotionalDiaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Comunidad y Soporte -->
    <Button
        android:id="@+id/communitySupportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_support_button_text"
        app:layout_constraintTop_toBottomOf="@id/selfHelpResourcesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Planificación y Objetivos -->
    <Button
        android:id="@+id/planningGoalsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planning_goals_button_text"
        app:layout_constraintTop_toBottomOf="@id/communitySupportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
