<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiarioEmocionalActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/diarioEmocionalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diario_emocional_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <!-- Área de Texto para Ingresar Notas -->
    <EditText
        android:id="@+id/diarioEmocionalInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/diario_emocional_hint"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:maxLines="10"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/diarioEmocionalTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Botón para Guardar Notas -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
